--- a/index.Rmd
+++ b/index.Rmd
@@ -62,7 +62,7 @@ bbox = as.numeric(sf::st_bbox(vpus))
 
 
 <center>
-# NOAA OWP NextGeneraton Modeling Framework \nHydrofabric
+# NOAA OWP NextGeneraton Modeling Framework Hydrofabric
 </center>
 <br>
 <br>
